--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "typewriter-effect": "^2.22.0",
     "zod": "^4.1.12"
