--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "motion": "^12.23.24",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "resend": "^6.5.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "typewriter-effect": "^2.22.0",
     "uuid": "^13.0.0",
