--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lucide-react": "^0.552.0",
     "mongodb": "^7.0.0",
     "motion": "^12.23.24",
-    "next": "16.0.1",
+    "next": "^16.0.10",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
@@ -53,7 +53,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.10",
     "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
