--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
@@ -32,6 +33,7 @@
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
